// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it goes in and out of edit mode 1`] = `


.emotion-55 article>p {
  font-family: Source Sans Pro!important;
}

.emotion-19 {
  position: absolute;
  top: 0.1rem;
  right: 0.2rem;
  color: #d1372e;
}

.emotion-19:hover,
.emotion-19:focus {
  color: #7d211c;
}

.emotion-27 {
  height: 50px;
  width: 50px;
}

.emotion-26 {
  height: 24px;
  width: 24px;
  margin-right: 7px;
}



.emotion-44,
.emotion-44:hover {
  border-radius: 5px;
  background-color: white;
  margin-top: 26px;
  padding: 3px 52px;
}

.emotion-53 {
  position: absolute;
  width: 100%;
}

.emotion-0 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  background: rgba(0,0,0,0.3);
  -webkit-animation-duration: 400ms;
  animation-duration: 400ms;
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
}

.emotion-22 {
  position: relative;
  border: 2px solid #a5bcd3;
  padding: 52px;
  padding-top: 0;
  background-color: #fff;
  z-index: 1;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  z-index: 1;
}

.emotion-4 figure {
  position: static !important;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-17 {
  position: relative;
  -webkit-flex: 1 0 50%;
  -ms-flex: 1 0 50%;
  flex: 1 0 50%;
  max-width: 600px;
}

.emotion-17 > article {
  max-width: 100%;
}

.emotion-11 {
  margin-top: 6.5px;
}

.emotion-11:first-of-type {
  margin-top: 0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-9 label {
  width: 104px;
  max-width: 104px;
  padding: 20px 13px 13px 0;
  text-transform: uppercase;
  font-weight: 600;
  font-size: 14;
  font-size: 0.7777777777777778rem;
  line-height: 1.1;
}

.emotion-8 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  background: #f8f8f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border: 1px solid #eff0f2;
  -webkit-transition: border-color 100ms ease;
  transition: border-color 100ms ease;
  border-radius: 4px;
  min-height: 52px;
  padding-right: 13px;
}

.emotion-8 input,
.emotion-8 textarea {
  width: inherit;
  font-weight: 400;
  color: #444;
  font-size: 18;
  font-size: 1rem;
  line-height: 1.3;
  background: none;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-8 input:focus,
.emotion-8 textarea:focus {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
}

.emotion-8 input {
  padding: 6.5px 13px;
}

.emotion-8 textarea {
  padding: 0 13px;
  height: 20px;
  margin: 14px 0;
  resize: none;
}

.emotion-8 .c-icon {
  width: 24px;
  height: 24px;
}

.emotion-13 {
  margin: 10px 0;
}

.emotion-15 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
}

.emotion-15:hover,
.emotion-15:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-15[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-15:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-20 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
}

.emotion-20:hover,
.emotion-20:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-20[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-20:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-20:hover,
.emotion-20:active,
.emotion-20:disabled,
.emotion-20:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-20:focus {
  outline-width: medium;
}

.emotion-6 {
  border: calc(26px / 6.5) solid rgba(0,0,0,0.1);
  border-bottom-color: #20588f;
  border-radius: 50%;
  -webkit-animation: spinnerAnimation 0.7s linear infinite;
  animation: spinnerAnimation 0.7s linear infinite;
  height: 26px;
  width: 26px;
  display: block;
  margin: 0;
}

.emotion-51 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0,0,0,0.8);
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.emotion-49 {
  background-color: #f8f8f8;
  box-shadow: 0 0 2px 0 rgba(115,115,115,0.5);
  width: 620px;
  border-radius: 5px;
  position: absolute;
  top: 5%;
  z-index: 2;
  max-height: 90vh;
  overflow: auto;
}

.emotion-30 {
  background: linear-gradient(180deg,#5d97a9,#508a9c);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.2rem;
  padding-left: 13px;
  height: 50px;
  color: #f8f8f8;
}

.emotion-47 {
  padding: 2em;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-42 {
  width: 100%;
}

.emotion-42 > * {
  width: 100%;
}

.emotion-42 form {
  background-color: white;
}

<div>
  <div
    autocapitalize="false"
    autocorrect="false"
    contenteditable="true"
    data-gramm="false"
    data-slate-editor="true"
    data-slate-node="value"
    role="textbox"
    spellcheck="false"
    style="position: relative; outline: none; white-space: pre-wrap; word-wrap: break-word;"
    zindex="-1"
  >
    <div
      data-slate-node="element"
      style="position: relative;"
    >
      <div
        data-slate-node="element"
        style="position: relative;"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-leaf="true"
          >
            <span
              data-slate-length="0"
              data-slate-zero-width="n"
            >
              ﻿
              <br />
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="emotion-53 emotion-54"
    contenteditable="false"
  >
    <div
      aria-hidden="true"
      class="emotion-0 emotion-1"
    />
    <div
      class="emotion-22 emotion-23"
    >
      <h1
        class="c-section-heading c-related-articles__component-title"
      >
        Relatert innhold
      </h1>
      <p>
        Dra artikkel for å endre rekkefølge
      </p>
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="drop-zone emotion-2 emotion-3"
        />
      </div>
      <div
        class="emotion-17 emotion-18"
        data-cy="styled-article-modal"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          role="combobox"
          style="position: relative;"
        >
          <div
            class="emotion-11 emotion-12"
          >
            <div
              class="emotion-9 emotion-10"
            >
              <form
                class="emotion-8"
              >
                <input
                  aria-autocomplete="list"
                  aria-labelledby="downshift-0-label"
                  autocomplete="off"
                  data-testid="dropdownInput"
                  id="downshift-0-input"
                  placeholder="Søk på tittel"
                  value=""
                />
                <div
                  class="emotion-6 emotion-7"
                />
              </form>
            </div>
          </div>
        </div>
        <div
          class="emotion-13 emotion-14"
        >
          Eller
        </div>
        <button
          class="emotion-15 emotion-16"
          data-testid="showAddExternal"
          type="button"
        >
          Legg til ekstern artikkel
        </button>
      </div>
      <button
        class="emotion-19 emotion-20 emotion-16"
        contenteditable="false"
        data-cy="close-related-button"
        type="button"
      >
        <svg
          class="c-icon"
          data-license="Apache License 2.0"
          data-source="Material Design"
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align: middle;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <title>
            DeleteForever
          </title>
          <g>
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="emotion-51 emotion-52"
    >
      <div
        aria-hidden="true"
        class="emotion-0 emotion-1"
      />
      <div
        class="emotion-49 emotion-50"
      >
        <div
          class="emotion-30 emotion-31"
        >
          Skriv inn tittel og url på ekstern artikkel
          <button
            class="emotion-27 emotion-20 emotion-16"
            type="button"
          >
            <svg
              class="c-icon emotion-26"
              data-license="Apache License 2.0"
              data-source="Material Design"
              fill="currentColor"
              height="1em"
              preserveAspectRatio="xMidYMid meet"
              style="vertical-align: middle;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <title>
                Cross
              </title>
              <g>
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </g>
            </svg>
          </button>
        </div>
        <div
          class="emotion-47 emotion-48"
        >
          <div
            class="emotion-42 emotion-43"
          >
            <div
              class="emotion-11 emotion-12"
            >
              <div
                class="emotion-9 emotion-10"
              >
                <div
                  class="emotion-8"
                >
                  <input
                    data-testid="addExternalTitleInput"
                    placeholder="Tittel"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div
              class="emotion-11 emotion-12"
            >
              <div
                class="emotion-9 emotion-10"
              >
                <div
                  class="emotion-8"
                >
                  <input
                    data-testid="addExternalUrlInput"
                    placeholder="https://example.com"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <button
            class="emotion-44 emotion-20 emotion-16"
            data-testid="taxonomyLightboxButton"
            type="button"
          >
            Lagre
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-55"
    contenteditable="false"
    data-testid="relatedWrapper"
    draggable="true"
    role="button"
    tabindex="0"
  >
    <section
      class="c-related-articles"
    >
      <h1
        class="c-section-heading c-related-articles__component-title"
      >
        Relatert innhold
      </h1>
      <div
        class="c-related-articles__articles"
      />
    </section>
  </div>
</div>
`;

exports[`it goes in and out of edit mode 2`] = `


.emotion-24 article>p {
  font-family: Source Sans Pro!important;
}

.emotion-17 {
  position: absolute;
  top: 0.1rem;
  right: 0.2rem;
  color: #d1372e;
}

.emotion-17:hover,
.emotion-17:focus {
  color: #7d211c;
}

.emotion-22 {
  position: absolute;
  width: 100%;
}

.emotion-0 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  background: rgba(0,0,0,0.3);
  -webkit-animation-duration: 400ms;
  animation-duration: 400ms;
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
}

.emotion-20 {
  position: relative;
  border: 2px solid #a5bcd3;
  padding: 52px;
  padding-top: 0;
  background-color: #fff;
  z-index: 1;
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  z-index: 1;
}

.emotion-4 figure {
  position: static !important;
}

.emotion-2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-15 {
  position: relative;
  -webkit-flex: 1 0 50%;
  -ms-flex: 1 0 50%;
  flex: 1 0 50%;
  max-width: 600px;
}

.emotion-15 > article {
  max-width: 100%;
}

.emotion-9 {
  margin-top: 6.5px;
}

.emotion-9:first-of-type {
  margin-top: 0;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7 label {
  width: 104px;
  max-width: 104px;
  padding: 20px 13px 13px 0;
  text-transform: uppercase;
  font-weight: 600;
  font-size: 14;
  font-size: 0.7777777777777778rem;
  line-height: 1.1;
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  background: #f8f8f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  border: 1px solid #eff0f2;
  -webkit-transition: border-color 100ms ease;
  transition: border-color 100ms ease;
  border-radius: 4px;
  min-height: 52px;
  padding-right: 13px;
}

.emotion-6 input,
.emotion-6 textarea {
  width: inherit;
  font-weight: 400;
  color: #444;
  font-size: 18;
  font-size: 1rem;
  line-height: 1.3;
  background: none;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-6 input:focus,
.emotion-6 textarea:focus {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: none;
}

.emotion-6 input {
  padding: 6.5px 13px;
}

.emotion-6 textarea {
  padding: 0 13px;
  height: 20px;
  margin: 14px 0;
  resize: none;
}

.emotion-6 .c-icon {
  width: 24px;
  height: 24px;
}

.emotion-11 {
  margin: 10px 0;
}

.emotion-13 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
}

.emotion-13:hover,
.emotion-13:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-13[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-13:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-18 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  transition: all .2s cubic-bezier(0.17,0.04,0.03,0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
}

.emotion-18:hover,
.emotion-18:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-18[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-18:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-18:hover,
.emotion-18:active,
.emotion-18:disabled,
.emotion-18:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-18:focus {
  outline-width: medium;
}

<div>
  <div
    autocapitalize="false"
    autocorrect="false"
    contenteditable="true"
    data-gramm="false"
    data-slate-editor="true"
    data-slate-node="value"
    role="textbox"
    spellcheck="false"
    style="position: relative; outline: none; white-space: pre-wrap; word-wrap: break-word;"
    zindex="-1"
  >
    <div
      data-slate-node="element"
      style="position: relative;"
    >
      <div
        data-slate-node="element"
        style="position: relative;"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-leaf="true"
          >
            <span
              data-slate-length="0"
              data-slate-zero-width="n"
            >
              ﻿
              <br />
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="emotion-22 emotion-23"
    contenteditable="false"
  >
    <div
      aria-hidden="true"
      class="emotion-0 emotion-1"
    />
    <div
      class="emotion-20 emotion-21"
    >
      <h1
        class="c-section-heading c-related-articles__component-title"
      >
        Relatert innhold
      </h1>
      <p>
        Dra artikkel for å endre rekkefølge
      </p>
      <div
        class="emotion-4 emotion-5"
      >
        <div
          class="drop-zone emotion-2 emotion-3"
        />
      </div>
      <div
        class="emotion-15 emotion-16"
        data-cy="styled-article-modal"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          role="combobox"
          style="position: relative;"
        >
          <div
            class="emotion-9 emotion-10"
          >
            <div
              class="emotion-7 emotion-8"
            >
              <form
                class="emotion-6"
              >
                <input
                  aria-autocomplete="list"
                  aria-labelledby="downshift-0-label"
                  autocomplete="off"
                  data-testid="dropdownInput"
                  id="downshift-0-input"
                  placeholder="Søk på tittel"
                  value=""
                />
                <svg
                  class="c-icon"
                  data-license="Apache License 2.0"
                  data-source="Material Design"
                  fill="currentColor"
                  height="1em"
                  preserveAspectRatio="xMidYMid meet"
                  style="vertical-align: middle;"
                  viewBox="0 0 48 48"
                  width="1em"
                >
                  <title>
                    Search
                  </title>
                  <g>
                    <path
                      d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
                    />
                  </g>
                </svg>
              </form>
            </div>
          </div>
        </div>
        <div
          class="emotion-11 emotion-12"
        >
          Eller
        </div>
        <button
          class="emotion-13 emotion-14"
          data-testid="showAddExternal"
          type="button"
        >
          Legg til ekstern artikkel
        </button>
      </div>
      <button
        class="emotion-17 emotion-18 emotion-14"
        contenteditable="false"
        data-cy="close-related-button"
        type="button"
      >
        <svg
          class="c-icon"
          data-license="Apache License 2.0"
          data-source="Material Design"
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align: middle;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <title>
            DeleteForever
          </title>
          <g>
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </g>
        </svg>
      </button>
    </div>
  </div>
  <div
    class="emotion-24"
    contenteditable="false"
    data-testid="relatedWrapper"
    draggable="true"
    role="button"
    tabindex="0"
  >
    <section
      class="c-related-articles"
    >
      <h1
        class="c-section-heading c-related-articles__component-title"
      >
        Relatert innhold
      </h1>
      <div
        class="c-related-articles__articles"
      />
    </section>
  </div>
</div>
`;
